# SHAPEwarp

./: Cargo.toml  Makefile.PL  README.md  SHAPEwarp  build.rs  swBuildDb  swKmerLookup
ffi/: .gitignore  Cargo.toml
ffi/kmer-lookup/: Cargo.toml
ffi/kmer-lookup/data/: test.db
ffi/kmer-lookup/src/: db_format.rs  lib.rs
ffi/src/: lib.rs
lib/: SW.pm
lib/SW/: Align.pm  DB.pm  KmerLookup.pm  Utils.pm
lib/SW/Align/: Alignment.pm
lib/SW/DB/: Entry.pm
src/: aligner.rs  cli.rs  db_file.rs  dotbracket.rs  fasta.rs  gapped_data.rs  gapped_reactivity.rs  gapped_sequence.rs  handle_query_entry.rs  iter.rs  main.rs  mass.rs  norm_dist.rs  null_model.rs  query_aligner.rs  query_file.rs  query_result.rs  stockholm.rs  viennarna.rs
src/db_file/: native.rs  xml.rs
t/: basic.t  query.txt  reactivity.shuffled.db
test_data/: query.txt  query_align.txt  query_empty_sequence.txt  query_invalid_base.txt  query_invalid_lengths.txt  query_invalid_reactivity.txt  query_truncated_reactivities.txt  query_truncated_sequence.txt  test_db.xml  valid_query.txt
viennarna-mfe-sys/: Cargo.toml  build.rs  wrapper.h
