[package]
name = "shapewarp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
fftw = "0.7.0"
fnv = "1.0.7"
itertools = "0.10.3"
ndarray = "0.15.4"
num-complex = "0.3.1"
num-traits = "0.2.14"
rand = "0.8.5"
smallvec = "1.8.0"
thiserror = "1.0.30"

[dev-dependencies]
approx = { version = "0.4.0", features = ["num-complex"] }
