[package]
name = "shapewarp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.1.12", features = ["derive"] }
csv = "1.1.6"
fftw = "0.7.0"
fnv = "1.0.7"
itertools = "0.10.3"
ndarray = "0.15.4"
num-complex = "0.3.1"
num-traits = "0.2.14"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_json = "1.0.85"
smallvec = "1.8.0"
tabled = "0.12.0"
thiserror = "1.0.30"
toml = "0.5.9"
viennarna-mfe-sys = { version = "0.1.0", path = "viennarna-mfe-sys" }

[dev-dependencies]
approx = { version = "0.4.0", features = ["num-complex"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
