[package]
name = "SHAPEwarp"
version = "2.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.58"
bitflags = "2.3.1"
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.1.6"
fftw = { version = "0.8.0", default-features = false, features = ["system"] }
fnv = "1.0.7"
itertools = "0.10.3"
ndarray = "0.15.4"
num-complex = "0.4.3"
num-traits = "0.2.14"
once_cell = "1.17.1"
quick-xml = "0.31.0"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_json = "1.0.85"
smallvec = "1.8.0"
statrs = "0.16.0"
tabled = "0.17.0"
toml_edit = { version = "0.19.10", features = ["serde"] }
viennarna-mfe-sys = { version = "0.1.0", path = "viennarna-mfe-sys" }

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
rand = { version = "0.8.5", features = ["small_rng"] }
tempfile = "3.5.0"

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1

[build-dependencies]
pkg-config = "0.3.27"
semver = "1.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(vrna24)', 'cfg(vrna25)', 'cfg(vrna251)', 'cfg(vrna26)', 'cfg(vrna27)'] }
