[package]
name = "kmer-lookup"
version = "0.1.0"
edition = "2018"

[dependencies]
crossbeam = "0.8.1"
fftw = "0.7.0"
fnv = "1.0.7"
itertools = "0.10.1"
num-complex = "0.3.0"
num-traits = "0.2.14"
num_cpus = "1.13.0"
smallvec = "1.6.1"
thiserror = "1.0.26"

[dev-dependencies]
approx = { version = "0.4.0", features = ["num-complex"] }
